tinyx-gateway/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tinyx-gateway
  namespace: tinyx
  labels:
    app: tinyx-gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tinyx-gateway
  template:
    metadata:
      labels:
        app: tinyx-gateway
    spec:
      containers:
        - name: tinyx-gateway
          image: registry.cri.epita.fr/charles.simon-meunier/tinyx/tinyx-gateway:latest
          ports:
            - name: http
              containerPort: 9000
          volumeMounts:
            - mountPath: /config/
              name: application-properties
      imagePullSecrets:
        - name: tinyx-pull-secret
      volumes:
        - name: application-properties
          configMap:
            name: tinyx-gateway-application-properties
