tinyx-gateway/service.yml
apiVersion: v1
kind: Service
metadata:
  name: tinyx-gateway
  namespace: tinyx
spec:
  selector:
    app: tinyx-gateway
  ports:
    - name: http
      port: 9000
      targetPort: 9000
      protocol: TCP
